components/test2-devfile-sample-llwu-sample/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: test2
    appstudio.openshift.io/component: test2-devfile-sample-llwu-sample
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest2-devfile-sample-llwu-sample
  namespace: rhn-engineering-markmc
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test2-devfile-sample-llwu-sample
    weight: null
status: {}
